[gd_scene load_steps=2 format=3 uid="uid://b54aw6cnjurm3"]

[ext_resource type="Script" path="res://scripts/web_install_window.gd" id="1_bugu4"]

[node name="WebInstallWindow" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bugu4")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="PakInstaller" type="Control" parent="CenterContainer"]
custom_minimum_size = Vector2(700, 300)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="CenterContainer/PakInstaller"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.176471, 0.227451, 0.301961, 1)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PakInstaller"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PakInstaller/MarginContainer"]
layout_mode = 2

[node name="PackContainer" type="HBoxContainer" parent="CenterContainer/PakInstaller/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BrowserContainer" type="VBoxContainer" parent="CenterContainer/PakInstaller/MarginContainer/VBoxContainer/PackContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="BrowseContainer" type="VBoxContainer" parent="CenterContainer/PakInstaller/MarginContainer/VBoxContainer/PackContainer/BrowserContainer"]
layout_mode = 2

[node name="BrowseButton" type="Button" parent="CenterContainer/PakInstaller/MarginContainer/VBoxContainer/PackContainer/BrowserContainer/BrowseContainer"]
layout_mode = 2
text = "Select File..."

[node name="ErrorLabel" type="Label" parent="CenterContainer/PakInstaller/MarginContainer/VBoxContainer/PackContainer/BrowserContainer"]
layout_mode = 2
text = "No valid file selected"
horizontal_alignment = 1

[node name="PackData" type="VBoxContainer" parent="CenterContainer/PakInstaller/MarginContainer/VBoxContainer/PackContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="PackName" type="HBoxContainer" parent="CenterContainer/PakInstaller/MarginContainer/VBoxContainer/PackContainer/PackData"]
layout_mode = 2

[node name="NameLineEdit" type="LineEdit" parent="CenterContainer/PakInstaller/MarginContainer/VBoxContainer/PackContainer/PackData/PackName"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
text = "WebsiteName"
alignment = 1
editable = false
flat = true

[node name="AuthorInfo" type="HBoxContainer" parent="CenterContainer/PakInstaller/MarginContainer/VBoxContainer/PackContainer/PackData"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PakInstaller/MarginContainer/VBoxContainer/PackContainer/PackData/AuthorInfo"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Target Website:"

[node name="AuthorLineEdit" type="LineEdit" parent="CenterContainer/PakInstaller/MarginContainer/VBoxContainer/PackContainer/PackData/AuthorInfo"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
placeholder_text = "Website Address"
alignment = 1
editable = false
flat = true

[node name="PackInfo" type="TextEdit" parent="CenterContainer/PakInstaller/MarginContainer/VBoxContainer/PackContainer/PackData"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
placeholder_text = "Web Description"
editable = false
wrap_mode = 1

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/PakInstaller/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="CenterContainer/PakInstaller/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Close"

[node name="InstallButton" type="Button" parent="CenterContainer/PakInstaller/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
disabled = true
text = "Install"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(337, 159)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.tres ; Text Resource")
use_native_dialog = true

[node name="PackInstalled" type="AcceptDialog" parent="."]
title = "Website Added"
initial_position = 1
size = Vector2i(251, 100)
ok_button_text = "Done"
dialog_text = "Website successfully added"
